--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <!-- Place favicon.ico in the root directory -->
 
         <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
@@ -19,33 +20,80 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+        
+        <header>
+            <h1>RANDOM DESIGN CO.</h1>
+            <nav class="main-nav">
+                <i class="fa fa-bars"></i>
+            </nav>    
+        </header>    
 
-        <!-- Add your site or application content here -->
-          RANDOM DESIGN CO.
+        <section class="page-section jubotron">
+            <h2>BE RANDOM</h2>
+            <a href="#" class="btn">OMG YES!</a>
+        </section>    
 
---
+        <section class="page-section">
+            <h2>ABOUT US</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos nam non, explicabo cum inventore, molestiae fuga nulla repellendus architecto rerum nostrum at amet, officia eum quisquam earum ipsam similique ad!</p>
+        </section>    
 
-BE RANDOM
+        <section class="page-section">
+            <h2>LATEST WORK</h2>
+            
+            <a href="#">
+                <article class="project-thumb">
+                    <h3>Project 1</h3>
+                    <img src="img/1-cocktail.jpeg" alt="Cocktail">
+                </article>
+            </a>
 
-OMG YES!
+            <a href="#">
+                <article class="project-thumb">
+                    <h3>Project 2</h3>
+                    <img src="img/2-disco.jpeg" alt="Disco">
+                </article>
+            </a>
 
---
+            <a href="#">
+                <article class="project-thumb">
+                    <h3>Project 3</h3>
+                    <img src="img/3-bookstore.jpeg" alt="Bookstore">
+                </article>
+            </a>
 
-ABOUT US
+            <a href="#">
+                <article class="project-thumb">
+                    <h3>Project 4</h3>
+                    <img src="img/4-traffic.jpeg" alt="Traffic">
+                </article>
+            </a>
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos nam non, explicabo cum inventore, molestiae fuga nulla repellendus architecto rerum nostrum at amet, officia eum quisquam earum ipsam similique ad!
+            <a href="#">
+                <article class="project-thumb">
+                    <h3>Project 5</h3>
+                    <img src="img/5-concert.jpeg" alt="Concert">
+                </article>
+            </a>
 
---
+            <a href="#">
+                <article class="project-thumb">
+                    <h3>Project 6</h3>
+                    <img src="img/6-nightlife.jpeg" alt="Nightlife">
+                </article>
+            </a>
 
-LATEST WORK
+            <a href="#">
+                <article class="project-thumb">
+                    <h3>Project 7</h3>
+                    <img src="img/7-bar.jpeg" alt="Bar">
+                </article>
+            </a>
+        </section>
 
-PROJECT 1
-PROJECT 2
-PROJECT 3
-PROJECT 4
-PROJECT 5
-PROJECT 6
-PROJECT 7
+        <footer class="page-footer">
+            <p>© 2016 Random Design Co.</p>
+        </footer>    
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
