css/html update
addition of CSS and html updates to fit with CSS.

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        
-        <header>
+
+        <header class="page-header">
             <h1>RANDOM DESIGN CO.</h1>
             <nav class="main-nav">
                 <i class="fa fa-bars"></i>
@@ -29,8 +29,11 @@
         </header>    
 
         <section class="page-section jubotron">
-            <h2>BE RANDOM</h2>
-            <a href="#" class="btn">OMG YES!</a>
+            <div class="jumbotron_content">
+                <h2>BE RANDOM</h2>
+                <a href="#" class="btn">OMG YES!</a>
+            </div>  
+            <img class="jumbotron_bg" src="img/purple-bg.jpeg" alt="Purple">
         </section>    
 
         <section class="page-section">
@@ -41,6 +44,7 @@
         <section class="page-section">
             <h2>LATEST WORK</h2>
             
+            <div class="clearfix">
             <a href="#">
                 <article class="project-thumb">
                     <h3>Project 1</h3>
@@ -72,24 +76,25 @@
             <a href="#">
                 <article class="project-thumb">
                     <h3>Project 5</h3>
-                    <img src="img/5-concert.jpeg" alt="Concert">
+                    <img src="img/5-concert.jpg" alt="Concert">
                 </article>
             </a>
 
             <a href="#">
                 <article class="project-thumb">
                     <h3>Project 6</h3>
-                    <img src="img/6-nightlife.jpeg" alt="Nightlife">
+                    <img src="img/6-nightlife.jpg" alt="Nightlife">
                 </article>
             </a>
 
             <a href="#">
                 <article class="project-thumb">
                     <h3>Project 7</h3>
-                    <img src="img/7-bar.jpeg" alt="Bar">
+                    <img src="img/7-bar.jpg" alt="Bar">
                 </article>
             </a>
         </section>
+        </div>
 
         <footer class="page-footer">
             <p>© 2016 Random Design Co.</p>
