--- a/dynamiccontent.html
+++ b/dynamiccontent.html
@@ -39,6 +39,9 @@
         <section class="page-section">
             <h2>ABOUT US</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos nam non, explicabo cum inventore, molestiae fuga nulla repellendus architecto rerum nostrum at amet, officia eum quisquam earum ipsam similique ad!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos nam non, explicabo cum inventore, molestiae fuga nulla repellendus architecto rerum nostrum at amet, officia eum quisquam earum ipsam similique ad!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos nam non, explicabo cum inventore, molestiae fuga nulla repellendus architecto rerum nostrum at amet, officia eum quisquam earum ipsam similique ad!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos nam non, explicabo cum inventore, molestiae fuga nulla repellendus architecto rerum nostrum at amet, officia eum quisquam earum ipsam similique ad!</p>
         </section>    
 
         <section class="page-section">
@@ -93,9 +96,37 @@
                     <img src="img/7-bar.jpg" alt="Bar">
                 </article>
             </a>
-            </div>    
+
+            <a href="#">
+                <article class="project-thumb">
+                    <h3>Project 7</h3>
+                    <img src="img/7-bar.jpg" alt="Bar">
+                </article>
+            </a>
+
+            <a href="#">
+                <article class="project-thumb">
+                    <h3>Project 7</h3>
+                    <img src="img/7-bar.jpg" alt="Bar">
+                </article>
+            </a>
+
+             <a href="#">
+                <article class="project-thumb">
+                    <h3>Project 7</h3>
+                    <img src="img/7-bar.jpg" alt="Bar">
+                </article>
+            </a>
+        </div>
         </section>
 
+        <section class="page-section jumbotron">
+            <div class="jumbotron_content">
+                <h2>Contact Us</h2>
+                <a href="#" class="btn">info@randomdesignco.com</a>
+            </div>  
+            <img class="jumbotron_bg" src="img/purple-bg.jpeg" alt="Purple">
+        </section>   
 
         <footer class="page-footer">
             <p>© 2016 Random Design Co.</p>
